feat: create session generate jwt.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,15 @@ services:
     restart: always
     ports:
       - "6379:6379"
-    command: ["redis-server", "--appendonly", "yes"]
+    command:
+      - redis-server
+      - "--appendonly"
+      - "yes"
+      - "--aclfile"
+      - "/data/redis-users.acl"
     volumes:
       - redis_data:/data
+      - ./redis-users.acl:/data/redis-users.acl
     networks:
       - jwt_network
 
